supabase-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-auth
  labels:
    workload: supabase-auth
  namespace: supabase
spec:
  replicas: 1
  selector:
    matchLabels:
      workload: supabase-auth
  template:
    metadata:
      labels:
        workload: supabase-auth
    spec:
      containers:
      - name: supabase-auth
        securityContext: {}
        resources: {}
        image: supabase/gotrue:v2.60.7
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 9999
          protocol: TCP
