supabase-auth/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: supabase-auth
  labels:
    workload: supabase-auth
namespace: supabase
spec:
  type: ClusterIP
  ports:
  - port: 9999
    targetPort: 9999
    protocol: TCP
    name: http
  selector:
    workload: supabase-auth
